static/css/core.css
 @import url(http://fonts.googleapis.com/css?family=Ubuntu:400,700); /* feel free to change this */

 *, *:before, *:after {
   -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
 }

html, body{
	padding: 0px;
	margin: 0px;
	font-family: 'Ubuntu', sans-serif;
	font-size: 100%;
	/*background: #E9E9E9;*/
	background: #dddddd;
	background-image: url('../images/background.png');
	min-width: 900px;
}

.navWrapper {

    width: 100%;
    float: left;

    background: rgba(156,156,156,1);
    background: -moz-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(156,156,156,1)), color-stop(100%, rgba(173,173,173,0)));
    background: -webkit-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    background: -o-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    background: -ms-linear-gradient(top, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    background: linear-gradient(to bottom, rgba(156,156,156,1) 0%, rgba(173,173,173,0) 100%);
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#9c9c9c', endColorstr='#adadad', GradientType=0 );

}

.navContainer {
    padding-left: 5px;
    width: 900px;
    margin: auto;
}

.navItemWrapper {
    float: left;
    font-size: 14pt;
	padding: 12px;
    padding-top: 12px;
	padding-bottom: 8px;
    margin: 2px;
	margin-top: 6px;
	border-radius: 0px 3px 0px 3px;
	transition: ease background .5s;
}

.navItemWrapper:hover{
	background: rgba(169,0,0,.5);
	transition: ease background .5s;
	/*background: -moz-linear-gradient(top,  rgba(255,12,12,.6) 0%, rgba(173,173,173,0) 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgba(255,12,12,.6)), color-stop(100%,rgba(173,173,173,0)));
	background: -webkit-linear-gradient(top,  rgba(255,12,12,.6) 0%,rgba(173,173,173,0) 100%);
	background: -o-linear-gradient(top,  rgba(255,12,12,.6) 0%,rgba(173,173,173,0) 100%);
	background: -ms-linear-gradient(top,  rgba(255,12,12,.6) 0%,rgba(173,173,173,0) 100%);
	background: linear-gradient(to bottom,  rgba(255,12,12,.6) 0%,rgba(173,173,173,0) 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff0c0c', endColorstr='#adadad',GradientType=0 );*/
}

.localNavWrapper {
    margin: 2px;
    padding: 20px 0px 20px 10px;
    border: solid 1px;
    width: 158px;
    font-size: 85%;
    display: inline-block;
}

.sideBar{
    margin: 8px;
    float: left;
}

.localNavItem {
    white-space: nowrap;
    width: 100%;
}
.pageContentWrapper {
    width: 900px;
    margin: auto;
    border: solid 1px rgba(0, 0, 0, 0);
}

.pageContentHomePage {
    width: 700px;
}

.pageContent {
    padding: 20px;
    margin: 10px;
    float: left;
    padding-top: 0px;
}

.pannel {
    border: solid 1px #777;
    color: #333;
    -webkit-box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.30);
    -moz-box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.30);
    box-shadow: 3px 3px 6px 0px rgba(0,0,0,0.30);
    border-radius: 0px 8px 0px 8px;
    -moz-border-radius: 0px 8px 0px 8px;
    -webkit-border-radius: 0px 8px 0px 8px;
    background: #E9E9E9;
}

.pageContentDocs {
    width: 700px;
}

.logo {
    float: left;
    width: 125px;
    margin-top: -8px;
}

.logo img {
    margin-top: 19px;
    margin-bottom: -8px;
    width: 140px;
}

#errorPage {
    position:absolute;
    left: 0;
    right: 0;
    bottom: 0;
    top: 40px;
}

.localNavContainer{
	border-left: solid 1px;
	padding-left: 5px;
    float: left;
    width: 100%;
}

.localNavContainer a:hover{
    text-decoration: none;
}

.localNavItemWrapper {
    padding-top: 5px;
    padding-bottom: 5px;
    width: 100%;
    -o-transition:.2s;
    -ms-transition:.2s;
    -moz-transition:.2s;
    -webkit-transition:.2s;
    transition:.2s;
}

.localNavItemWrapper:hover {
    background: #DDD;
    padding-left: 6px;
}

a{
	text-decoration: none;
	color: #444444;
}

a:hover{
	text-decoration: underline;
}

a:active{
	text-decoration: underline;
}

a:visited{
	text-decoration: none;
	color: #222222;
}


#main {
    float: left;
}

#command-of-day, #top-ten-commands{
    padding: 1em;
    border: 1px solid #111111;
    float: right;
    clear: right;
    width: 200px;
    margin: .5em;
	border-radius: 0px 8px 0px 8px;
}
#command-of-day h3, #top-ten-commands h3{
    color: #666;
	font-size: 1em;
}

#command-of-day a{
    font-size: 1.2em;
	color: rgb(169,3,41);
}

#command-of-day a:hover{
    text-decoration: none;
}

#top-ten-commands ul li, #top-ten-commands a{
    list-style: none;
    text-decoration: none;
    color: rgb(169,3,41);
}

#top-ten-commands a:hover{
    text-decoration: none;
}

.genTitle {
    color: rgb(169,3,41);
}


.searchResults {
    margin-top: 3px;
    background: #FFF;
    border-bottom: solid 1px #999;
    border-radius: 3px;
    width: 350px;
    position: absolute;
    top: 42px;
    box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.4);
    display: none;
}

.resultMessage {
    margin: 10px;
    color: #555;
}


.searchResult {
    margin: 5px;
    height: 65px;
    overflow: hidden;
    border-bottom: solid 1px #aaa;
    padding-bottom: 10px;
    margin-top: 5px;
}

.searchResult:hover {
    background: #F0F0F0;
}

.searchTitle {
    font-weight: bold;
    font-size: 12pt;
}

.searchDescription {
    font-size: 10pt;
    color: #555;
    overflow: hidden;
    padding: 5px;
    height: 40px;
    margin-left: 10px;
}


.searchResults a:hover{
    text-decoration: none;
}

#Search {
    float: right;
    width: 350px;
    margin-top: 18px;
    margin-right: 20px;
}

#searchField {
    float: right;
    width: 200px;
    border-radius: 2px;
    border: none;
    box-shadow: inset -1px 1px 4px 0px rgba(0,0,0,0.7);
    background: #F2F2F2;
    height: 24px;
    padding: 3px;
    -o-transition:.2s;
    -ms-transition:.2s;
    -moz-transition:.2s;
    -webkit-transition:.2s;
    transition:.2s;
}

#searchField:hover {
    background: #fff;
}

#searchField:focus {
    background: #fff;
    outline: none;
    width: 350px;
}

.selectedNavItem {
    font-weight: bold;
}


.quizLink {
    font-size: 28pt;
    margin: auto;
    text-align: center;
}

.quizLink a {
    color: #0580d2;
}

h1{
	color: rgb(169,3,41);
}

.clickable {
    cursor: pointer;
}

#loginBox {
    display: none;
	font-size: 85%;
	font-family: ubuntu;
	background: #fefefe url(../images/background-login.png);
}

.lastScore {
    font-size: 12pt;
    margin: 10px;
}

td {
    padding: 10px;
}

.ui-dialog-title{
	font-family: Ubuntu;
}

.historyItem {
    margin: 4px;
}

.historyTitle {
    width: 100%;
    background: #DDD;
    font-weight: bold;
    padding: 5px;
    padding-top: 15px;
    padding-bottom: 15px;
	-webkit-transition: padding-left .6s ease;
}


.historyContent {
	display: block;
    -webkit-transition: all .4s ease;
    overflow: hidden;
	padding: 0px;
	max-height: 0px;
}

.historyTitle:hover {
    background: #D0D0D0;
    padding-left: 20px;
}

.historyTitle:hover + .historyContent {
    max-height: 400px;
	padding: 10px;
}

.footer {
    width: 100%;
    text-align: center;
    margin: 20px;
}

.pageVIews {
    font-size: 12pt;
    font-weight: normal;
    margin-left: 20px;
    margin-top: 20px;
    float: right;
    color: #777;
}

#loginTable{
	margin: 0;
	padding: 0;
	position: relative;
	left: -11px;
	width: 50%
}

.pageContent img {
	max-width: 100%;
	height: auto;
}

input#submit{
	width: 100%;
}

#loginWrapper{
	width: 45%;
}

.quizLink > a{
	color: rgb(169,3,41);
}

.homeContent {
    width: 410px;
    padding-left: 20px;
    float: left;
}

